# mandala-api

./: .dockerignore  .env.example  .gitignore  Containerfile  Makefile  README.md  alembic.ini  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: t19_01_telegram_stars_plan_link.py  t3_03_rename_link_metadata_to_metadata.py  t3_core_01_core_tables.py  (+2 more)
docs/: README.md  agent.md  architecture.md  billing.md  channels.md  data-model.md  deployment-yandex-cloud.md  getting-started.md  implementation-plan.md  mvp-first-run.md  product.md  quotas-and-plans.md  roadmap.md
miniapp/: clean-podman-all.sh  clean-podman.sh  doc---app-api.md  doc---app.md  generate-docs.js  local commands  package-lock.json  package.json  prompt  secretdb  yc commands
scripts/: check.sh  check_postgres.py  verify_local_postgres.sh  verify_migration_state.py  verify_migrations.sh  verify_project.sh
terraform/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
tests/: test_billing_period.py  test_billing_provider.py  test_client_knowledge.py  test_domain_contracts.py  test_http_app.py  test_image_stub.py  test_intake_loader.py  test_intent_router.py  test_llm_openai_client.py  test_llm_time_context.py  test_mandala.py  test_observability.py  test_openai_image_client.py  test_post_intake_offers.py  test_quick_actions.py  test_rag_vertical_isolation.py  test_scenario_intake_logic.py  test_telegram_adapter.py  test_telegram_text_format.py  test_text_reply_dialog_context.py  test_web_inbound_map.py
(+126 files in other folders)
