[project]
name = "mandala"
version = "0.1.0"
description = "Бэкенд Mandala — см. docs/architecture.md и docs/implementation-plan.md"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "psycopg[binary]>=3.2",
    "pydantic>=2",
    "qdrant-client>=1.11",
    "sqlalchemy>=2.0",
    "uvicorn>=0.32",
]

[project.optional-dependencies]
dev = [
    "alembic>=1.14",
    "mypy>=1.11",
    "pytest>=8.0",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mandala"]

[tool.hatch.build.targets.sdist]
include = ["src/mandala", "tests", "README.md", "pyproject.toml"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests", "scripts", "alembic"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "W"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
explicit_package_bases = true
strict = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: тесты с реальной БД (нужен DATABASE_URL)",
    "llm_live: опциональный вызов реального LLM (нужны LLM_LIVE_TEST=1 и LLM_*)",
]
